syntax = "proto3";
option csharp_namespace = "Phorkus.Proto";

import "default.proto";
import "asset.proto";

enum TransactionType {
    TRANSACTION_TYPE_MINER = 0;
    TRANSACTION_TYPE_REGISTER = 1;
    TRANSACTION_TYPE_ISSUE = 2;
    TRANSACTION_TYPE_CONTRACT = 3;
    TRANSACTION_TYPE_PUBLISH = 4;
    TRANSACTION_TYPE_DEPOSIT = 5;
    TRANSACTION_TYPE_WITHDRAW = 6;
    TRANSACTION_TYPE_CONFIRM = 7;
}

enum TransactionFlag {
    TRANSACTION_FLAG_NONE = 0x0000;
}

enum BlockchainType {
    BITCOIN = 0;
    ETHEREUM = 1;
}

enum AddressFormat {
    RIPMD160 = 0;
    ED25519 = 1;
}

message ContractTransaction {
    UInt160 asset = 1;
    UInt160 to = 2;
    UInt256 value = 3;
    bytes script = 4;
    UInt256 fee = 5;
}

message IssueTransaction {
    UInt160 asset = 1;
    UInt256 supply = 2;
    UInt160 to = 3;
}

message PublishTransaction {
    UInt160 hash = 1;
    bytes script = 2;
}

message RegisterTransaction {
    AssetType type = 1;
    string name = 2;
    UInt256 supply = 3;
    uint32 decimals = 4;
    UInt160 owner = 5;
    UInt160 minter = 6;
}

message MinerTransaction {
    UInt160 miner = 1;
}

message DepositTransaction {
    UInt160 recipient = 1;
    BlockchainType blockchain_type = 2;
    UInt256 value = 3;
    bytes transaction_hash = 4;
    AddressFormat address_format = 5;
    uint64 timestamp = 6;
    UInt160 asset_hash = 7;
}

message WithdrawTransaction {
    UInt160 recipient = 1;
    BlockchainType blockchain_type = 2;
    UInt256 value = 3;
    bytes transaction_hash = 4;
    AddressFormat address_format = 5;
    uint64 timestamp = 6;
    UInt160 asset_hash = 7;
}

message ConfirmTransaction {
    UInt160 recipient = 1;
    BlockchainType blockchain_type = 2;
    UInt256 value = 3;
    bytes transaction_hash = 4;
    AddressFormat address_format = 5;
    uint64 timestamp = 6;
    UInt160 asset_hash = 7;
}

message TransactionState {
    enum TransactionStatus {
        TRANSACTION_STATUS_TAKEN = 0;
        TRANSACTION_STATUS_CONFIRMED = 1;
        TRANSACTION_STATUS_FAILED = 2;
    }
    TransactionStatus status = 1;
}

message Transaction {
    TransactionType type = 1;
    uint32 version = 2;
    uint64 flags = 3;
    UInt160 from = 4;
    uint64 nonce = 5;
    oneof data {
        ContractTransaction contract = 6;
        IssueTransaction issue = 7;
        PublishTransaction publish = 8;
        RegisterTransaction register = 9;
        MinerTransaction miner = 10;
        DepositTransaction deposit = 11;
        WithdrawTransaction withdraw = 12;
        ConfirmTransaction confirm = 13;
    }
}

message SignedTransaction {
    Transaction transaction = 1;
    UInt256 hash = 2;
    Signature signature = 3;
}